fix:- corrected the alignment of the pages

--- a/styles/homePage/home.css
+++ b/styles/homePage/home.css
@@ -3,7 +3,6 @@ body {
   padding: 0;
 }
 
-
 /* common features */
 
 .showButton {
@@ -65,7 +64,6 @@ body {
 }
 
 .next-class {
-  border: 2px solid #4582ff;
   background-color: white;
   border-radius: 50%;
   position: absolute;
